<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clp_sfondo"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/clp_sfondo"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="228dp"
                android:layout_height="234dp"
                android:layout_gravity="center"
                android:contentDescription="@string/sfondo"
                android:scaleType="fitCenter"
                android:src="@drawable/clp_scritta" />

            <EditText
                android:id="@+id/forpas"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/style_textfield_textfield_disabled_holo_light"
                android:ems="10"
                android:hint="@string/email"
                android:textColor="#000000"
                android:textColorHint="#ffff"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/alert"
                android:layout_width="290dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:textColor="#FF0000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/respass"
                android:layout_width="200dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:text="@string/ricevi_email"
                android:textColor="#ffff"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>